# i18n_core

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
i18n_core/: __init__.py  gui.py  patches.py  registry.py  reset_locale.py
tests/: test_e2e_msgfmt.py  test_install_module_translation.py
