[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "i18n_core"
version = "2.0.0"
description = "Internationalization and localization setup and support utilities."
readme = "README.md"
license = "MIT"
authors = [
    {name = "Christopher Toth", email = "q@q-continuum.net"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "babel>=2.15,<3.0",
    "platform_utils",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "build",
    "twine",
]

[tool.uv]
dev-dependencies = [
    "pytest>=6.0",
    "build>=0.7",
    "twine>=3.0",
]

[tool.uv.sources]
